--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                     <ul class="list-disc list-inside text-gray-800 space-y-2">
                         <li>
                             <strong>Multi-fidelity Physics-informed Generative Adversarial Networks (MF-PIGANs) for PDEs:</strong> Developed a pioneering approach that combines the strengths of PINNs, GANs, and multi-fidelity modeling to solve partial differential equations. This includes physics-supervision in the adversarial process, mode collapse mitigation, and first-order PDE formulation for improved accuracy and stability.
-                            <a href="#publications" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper #3)</a>
+                            <a href="#pub-P4" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper P4)</a>
                         </li>
                         <li>
                             <strong>Interpretable Physics-informed Graph Neural Networks (HydroGraphNet) for Flood Forecasting:</strong> Introduced a novel framework integrating Kolmogorov-Arnold Network (KAN) to enhance model interpretability and embedding mass conservation laws for physically consistent predictions in unstructured mesh-based flood forecasting.
-                            <a href="#publications" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper #6)</a>
+                            <a href="#pub-P1" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper P1)</a>
                         </li>
                     </ul>
                 </div>
@@ -145,19 +145,19 @@
                     <ul class="list-disc list-inside text-gray-800 space-y-2">
                         <li>
                             <strong>Multi-fidelity GNNs for Flood Hazard Mapping:</strong> Proposed a hierarchical learning framework unifying coarse- and fine-resolution data for efficient and accurate flood hazard mapping, significantly outperforming single-fidelity models.
-                            <a href="#publications" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper: Mutli_Fidelity_GNN_for_Flood_Hazard_Mapping___Elsevier)</a>
+                            <a href="#pub-U1" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper U1)</a>
                         </li>
                         <li>
                             <strong>Multi-fidelity GNNs for Power Flow Analysis:</strong> Developed a multi-fidelity GNN-based surrogate model for efficient power flow calculations under high-dimensional demand and renewable generation uncertainty, demonstrating robustness to topology changes.
-                            <a href="#publications" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper #4)</a>
+                            <a href="#pub-P3" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper P3)</a>
                         </li>
                         <li>
                             <strong>Multifidelity GNNs for Mesh-based PDE Surrogate Modeling:</strong> Pioneered MFGNN frameworks that efficiently combine low-fidelity and high-fidelity data to train accurate surrogate models for mesh-based PDE simulations, reducing computational cost.
-                            <a href="#publications" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper #5)</a>
+                            <a href="#pub-P2" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper P2)</a>
                         </li>
                         <li>
                             <strong>NVIDIA PhysicsNeMo Contribution:</strong> Integrated the HydroGraphNet model into NVIDIA's PhysicsNeMo framework, demonstrating practical software engineering skills and collaboration in a leading tech environment.
-                            <a href="https://github.com/NVIDIA/physicsnemo/pull/881" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline ml-2 text-sm">(Pull Request)</a>
+                            <a href="https://github.com/NVIDIA/physicsnemo/pull/881" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline ml-2 text-sm">(NVIDIA PhysicsNeMo Pull Request)</a>
                         </li>
                     </ul>
                 </div>
@@ -170,7 +170,7 @@
                     <ul class="list-disc list-inside text-gray-800 space-y-2">
                         <li>
                             <strong>Domain-Adaptive Geometry-Informed Neural Operators (GINO) for Rapid Flood Forecasting:</strong> Introduced Flood Forecaster, a novel framework integrating GNOs and FNOs through a three-stage architecture (Geometry Encoder, Global Model, Geometry Decoder) for high-resolution flood inundation mapping. Incorporates Gradient Reversal Layer (GRL) for domain adaptation, promoting learning of domain-invariant features and enhancing generalizability in data-scarce scenarios.
-                            <a href="#publications" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper: Domain_Adaptive_Geometry_Informed_Neural_Operators_for_Rapid_Flood_Forecasting)</a>
+                            <a href="#pub-I2" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper I2)</a>
                         </li>
                     </ul>
                 </div>
@@ -183,11 +183,11 @@
                     <ul class="list-disc list-inside text-gray-800 space-y-2">
                         <li>
                             <strong>Improving Accuracy and Computational Efficiency of Optimal Design of Experiments via Greedy Backward Approach:</strong> Proposed a novel greedy algorithm that significantly enhances the accuracy, robustness, and computational efficiency of optimal Design of Experiments (DoEs) for Polynomial Chaos Expansion (PCE), especially in high-dimensional problems.
-                            <a href="#publications" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper #2)</a>
+                            <a href="#pub-P5" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper P5)</a>
                         </li>
                         <li>
                             <strong>Probabilistic Framework for Evaluating Seismic Resilience of Transportation Systems:</strong> Developed a probabilistic framework for evaluating seismic resilience during emergency medical response, integrating hazard, risk, network, and agent-based models. While not directly ML, this project demonstrates strong quantitative modeling, systems thinking, and data-driven approaches.
-                            <a href="#publications" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper #1)</a>
+                            <a href="#pub-P6" class="text-indigo-600 hover:underline ml-2 text-sm">(Paper P6)</a>
                         </li>
                     </ul>
                 </div>
@@ -200,58 +200,58 @@
             <div class="max-w-5xl mx-auto space-y-6 text-lg">
                 <h3 class="text-xl font-semibold text-gray-800 mb-2">Under Review:</h3>
                 <ul class="list-disc list-inside space-y-3">
-                    <li>
-                        Taghizadeh, M., Zandsalimi, Z., Shafiee-Jood, M. & Alemazkoor, N., "Multi-Fidelity Graph Neural Networks for Efficient and Accurate Flood Hazard Mapping," <em>Under Review in Journal of Environmental Modelling & Software.</em>
+                    <li id="pub-U1">
+                        <strong>U1.</strong> Taghizadeh, M., Zandsalimi, Z., Shafiee-Jood, M. & Alemazkoor, N., "Multi-Fidelity Graph Neural Networks for Efficient and Accurate Flood Hazard Mapping," <em>Under Review in Journal of Environmental Modelling & Software.</em>
                         <a href="#research" class="text-indigo-600 hover:underline ml-2 text-sm"> (See Research Section)</a>
                     </li>
-                    <li>
-                        Taghizadeh, M., Mahsuli, M., "Probabilistic Modeling of the Risk and Recovery of the Transportation Systems for Community Resilience Analysis," <em>Revisions Under Review in Reliability Engineering & System Safety.</em>
+                    <li id="pub-U2">
+                        <strong>U2.</strong> Taghizadeh, M., Mahsuli, M., "Probabilistic Modeling of the Risk and Recovery of the Transportation Systems for Community Resilience Analysis," <em>Revisions Under Review in Reliability Engineering & System Safety.</em>
                     </li>
                 </ul>
 
                 <h3 class="text-xl font-semibold text-gray-800 mb-2 mt-6">Peer-Reviewed Publications:</h3>
                 <ul class="list-disc list-inside space-y-3">
-                    <li>
-                        Taghizadeh, M., Zandsalimi, Z., Nabian, M. A., Shafiee-Jood, M. & Alemazkoor, N., "Interpretable Physics-Informed Graph Neural Networks for Flood Forecasting," <em>Computer-Aided Civil and Infrastructure Engineering</em>, 2025.
+                    <li id="pub-P1">
+                        <strong>P1.</strong> Taghizadeh, M., Zandsalimi, Z., Nabian, M. A., Shafiee-Jood, M. & Alemazkoor, N., "Interpretable Physics-Informed Graph Neural Networks for Flood Forecasting," <em>Computer-Aided Civil and Infrastructure Engineering</em>, 2025.
                         <a href="https://onlinelibrary.wiley.com/doi/10.1111/mice.13484" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline ml-2 text-sm">(DOI)</a>
                     </li>
-                    <li>
-                        Taghizadeh, M., Nabian, M. A. & Alemazkoor, N., "Multifidelity Graph Neural Networks for Efficient and Accurate Mesh-based Partial Differential Equations Surrogate Modeling," <em>Computer-Aided Civil and Infrastructure Engineering</em>, 2024. <em>Chosen by the editor-in-chief to be featured on the journal's cover.</em>
+                    <li id="pub-P2">
+                        <strong>P2.</strong> Taghizadeh, M., Nabian, M. A. & Alemazkoor, N., "Multifidelity Graph Neural Networks for Efficient and Accurate Mesh-based Partial Differential Equations Surrogate Modeling," <em>Computer-Aided Civil and Infrastructure Engineering</em>, 2024. <em>Chosen by the editor-in-chief to be featured on the journal's cover.</em>
                         <a href="https://onlinelibrary.wiley.com/doi/10.1111/mice.13312" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline ml-2 text-sm">(DOI)</a>
                     </li>
-                    <li>
-                        Taghizadeh, M., Khayambashi, K., Hasnat, M. A. & Alemazkoor, N., "Multi-fidelity Graph Neural Networks for Efficient Power Flow Analysis under High-Dimensional Demand and Renewable Generation Uncertainty," <em>Electric Power System Research</em>, 2024.
+                    <li id="pub-P3">
+                        <strong>P3.</strong> Taghizadeh, M., Khayambashi, K., Hasnat, M. A. & Alemazkoor, N., "Multi-fidelity Graph Neural Networks for Efficient Power Flow Analysis under High-Dimensional Demand and Renewable Generation Uncertainty," <em>Electric Power System Research</em>, 2024.
                         <a href="https://github.com/MehdiTaghizadehUVa/MFGNN_Power" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline ml-2 text-sm">(Dataset/Code)</a>
                         <a href="https://www.sciencedirect.com/science/article/pii/S0378779624001946" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline ml-2 text-sm">(DOI)</a>
                     </li>
-                    <li>
-                        Taghizadeh, M., Nabian, M. A. & Alemazkoor, N., "Multi-fidelity Physics-informed Generative Adversarial Network for Solving Partial Differential Equations," <em>ASME Journal of Computing and Information Science in Engineering</em>, 2024.
+                    <li id="pub-P4">
+                        <strong>P4.</strong> Taghizadeh, M., Nabian, M. A. & Alemazkoor, N., "Multi-fidelity Physics-informed Generative Adversarial Network for Solving Partial Differential Equations," <em>ASME Journal of Computing and Information Science in Engineering</em>, 2024.
                         <a href="https://asmedigitalcollection.asme.org/computingengineering/article/23/1/011008/1179611/Multi-fidelity-Physics-informed-Generative" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline ml-2 text-sm">(DOI)</a>
                     </li>
-                    <li>
-                        Taghizadeh, M., Xiu, D. & Alemazkoor, N., "Improving Accuracy and Computational Efficiency of Optimal Design of Experiment via Greedy Backward Approach," <em>International Journal for Uncertainty Quantification</em>, 2023.
+                    <li id="pub-P5">
+                        <strong>P5.</strong> Taghizadeh, M., Xiu, D. & Alemazkoor, N., "Improving Accuracy and Computational Efficiency of Optimal Design of Experiment via Greedy Backward Approach," <em>International Journal for Uncertainty Quantification</em>, 2023.
                         <a href="https://www.begellhouse.com/journals/uncertainty-quantification/titles/1460E3647414A561.html" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline ml-2 text-sm">(DOI)</a>
                     </li>
-                    <li>
-                        Taghizadeh, M., Mahsuli, M. & Poorzahedy, H., "Probabilistic Framework for Evaluating the Seismic Resilience of Transportation Systems during Emergency Medical Response," <em>Reliability Engineering & System Safety</em>, 2023.
+                    <li id="pub-P6">
+                        <strong>P6.</strong> Taghizadeh, M., Mahsuli, M. & Poorzahedy, H., "Probabilistic Framework for Evaluating the Seismic Resilience of Transportation Systems during Emergency Medical Response," <em>Reliability Engineering & System Safety</em>, 2023.
                         <a href="https://www.sciencedirect.com/science/article/pii/S0951832023000780" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline ml-2 text-sm">(DOI)</a>
                     </li>
                 </ul>
 
                 <h3 class="text-xl font-semibold text-gray-800 mb-2 mt-6">In Preparation:</h3>
                 <ul class="list-disc list-inside space-y-3">
-                    <li>
-                        Anand, H., Khayambashi, K., Hasnat, M.A., Taghizadeh, M. Shafiee-Jood, M., & Alemazkoor N., "Graph Neural Network Applications in Foundational Physical Infrastructure Systems: A Review," <em>To be submitted to Nature Cities.</em>
+                    <li id="pub-I1">
+                        <strong>I1.</strong> Anand, H., Khayambashi, K., Hasnat, M.A., Taghizadeh, M. Shafiee-Jood, M., & Alemazkoor N., "Graph Neural Network Applications in Foundational Physical Infrastructure Systems: A Review," <em>To be submitted to Nature Cities.</em>
                     </li>
-                    <li>
-                        Taghizadeh, M., Zandsalimi, Z., Nabian, M. A., Shafiee-Jood, M. & Alemazkoor, N., "Domain-Adaptive Geometry-Informed Neural Operators for Rapid Flood Forecasting," <em>To be submitted to Journal of Hydrology.</em>
+                    <li id="pub-I2">
+                        <strong>I2.</strong> Taghizadeh, M., Zandsalimi, Z., Nabian, M. A., Shafiee-Jood, M. & Alemazkoor, N., "Domain-Adaptive Geometry-Informed Neural Operators for Rapid Flood Forecasting," <em>To be submitted to Journal of Hydrology.</em>
                         <a href="#research" class="text-indigo-600 hover:underline ml-2 text-sm"> (See Research Section)</a>
                     </li>
-                    <li>
-                        Taghizadeh, M., Mondschein, A., Park, B.B. & Alemazkoor, N., "Multimodal Safety Analysis Using Big Connected Vehicle Data: Evaluating Speeding and Harsh Braking on Local and Collector Roads," <em>Manuscript in Preparation.</em>
+                    <li id="pub-I3">
+                        <strong>I3.</strong> Taghizadeh, M., Mondschein, A., Park, B.B. & Alemazkoor, N., "Multimodal Safety Analysis Using Big Connected Vehicle Data: Evaluating Speeding and Harsh Braking on Local and Collector Roads," <em>Manuscript in Preparation.</em>
                     </li>
-                    <li>
-                        Taghizadeh, M., Nabian, M. A., & Alemazkoor, N., "Physics-Informed, Geometry-Integrated Neural Operator Framework for Real-Time Flood Forecasting," <em>Manuscript in Preparation.</em>
+                    <li id="pub-I4">
+                        <strong>I4.</strong> Taghizadeh, M., Nabian, M. A., & Alemazkoor, N., "Physics-Informed, Geometry-Integrated Neural Operator Framework for Real-Time Flood Forecasting," <em>Manuscript in Preparation.</em>
                     </li>
                 </ul>
             </div>
