--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="max-w-5xl mx-auto bg-white p-8 rounded-xl shadow-lg text-lg leading-relaxed flex flex-col md:flex-row items-center md:items-start space-y-6 md:space-y-0 md:space-x-8">
                 <!-- Photo Container -->
                 <div class="flex-shrink-0">
-                    <img src="https://placehold.co/200x200/A0B2C3/FFFFFF?text=Your+Photo" alt="Mehdi Taghizadeh" class="rounded-full w-48 h-48 object-cover shadow-lg border-4 border-indigo-200">
+                    <img src="images/mehdi_photo.jpg" alt="Mehdi Taghizadeh" class="rounded-full w-48 h-48 object-cover shadow-lg border-4 border-indigo-200">
                     <p class="text-sm text-center text-gray-500 mt-2">Mehdi Taghizadeh</p>
                 </div>
                 <!-- About Me Text -->
