--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-br from-blue-600 to-purple-700 text-white rounded-xl shadow-lg p-8 mx-auto my-8 lg:min-h-[calc(100vh-4rem)]">
             <div class="text-center max-w-4xl animate-fadeIn">
                 <h1 class="text-6xl font-extrabold mb-4 drop-shadow-lg">
-                    Innovating at the Intersection of AI, ML, and Engineering
+                    Mehdi Taghizadeh
                 </h1>
                 <p class="text-2xl mb-8 opacity-90">
                     Ph.D. Candidate in Civil Engineering at the University of Virginia, specializing in advanced Graph-Based Learning and Physics-informed AI for complex system modeling and prediction.
