--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <h3 class="text-2xl font-semibold mb-3 text-blue-700">Generative AI for Power System Restoration (Postdoc)</h3>
                     <p class="text-gray-700 mb-4">
-                        Architecting a generative AI framework to solve the large-scale power system restoration problem, framed as a trajectory optimization task on complex AC networks (a large-scale MINLP). This involves developing a Continuous Graph Diffusion model to generate optimal sequences of control actions for transitioning grids from blacked-out to secure states.
+                        Architecting a generative AI framework to solve the large-scale power system restoration problem, framed as a trajectory optimization task on complex AC networks (a large-scale MINLP). This involves developing a Graph Diffusion model to generate optimal sequences of control actions for transitioning grids from blacked-out to secure states.
                     </p>
                 </div>
 
