--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         My doctoral research focused on developing cutting-edge AI frameworks for modeling real-world phenomena, culminating in my dissertation, "Advances in Graph-Based Learning for Flood Forecasting." My work has produced novel architectures like Multi-Fidelity GNNs, interpretable Physics-informed GNNs (HydroGraphNet), and Domain-Adaptive Neural Operators (GINO) that significantly advance the speed, accuracy, and generalizability of physical system simulations.
                     </p>
                     <p class="mb-4">
-                        Currently, as a Postdoc with Prof. Ferdinando (Nando) Fioretto, I am architecting a generative AI framework to tackle the large-scale, computationally intractable power system restoration problem. This research involves developing a continuous graph diffusion model to generate optimal sequences of control actions, framing the challenge as a complex trajectory optimization task.
+                        Currently, as a Postdoc with Prof. Ferdinando (Nando) Fioretto, I am architecting a generative AI framework to tackle the large-scale, computationally intractable power system restoration problem. This research involves developing a graph diffusion model to generate optimal sequences of control actions, framing the challenge as a complex trajectory optimization task.
                     </p>
                     <p>
                         I am actively seeking full-time AI/ML Research Scientist positions where I can apply my expertise in GNNs, generative models, and physics-informed learning to contribute to groundbreaking innovations and solve meaningful, real-world challenges.
@@ -131,7 +131,7 @@
                 <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <h3 class="text-2xl font-semibold mb-3 text-blue-700">Generative AI for Power System Restoration (Postdoc)</h3>
                     <p class="text-gray-700 mb-4">
-                        Architecting a generative AI framework to solve the large-scale power system restoration problem, framed as a trajectory optimization task on complex AC networks (a large-scale MINLP). This involves developing a Continuous Graph Diffusion model to generate optimal sequences of control actions for transitioning grids from blacked-out to secure states.
+                        Architecting a generative AI framework to solve the large-scale power system restoration problem, framed as a trajectory optimization task on complex AC networks (a large-scale MINLP). This involves developing a Graph Diffusion model to generate optimal sequences of control actions for transitioning grids from blacked-out to secure states.
                     </p>
                 </div>
 
