--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mehdi Taghizadeh – AI/ML Research Scientist</title>
     <meta name="description" content="Personal website of Mehdi Taghizadeh, Ph.D. – AI/ML Research Scientist specializing in graph neural networks, neural operators, and physics-informed machine learning for complex physical and infrastructure systems.">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://mehditaghizadehuva.github.io/">
+
+    <!-- Google Search Console verification (replace with the meta tag they give you) -->
+    <!-- <meta name="google-site-verification" content="PASTE_YOUR_TOKEN_HERE"> -->
 
     <style>
         :root {
@@ -287,7 +292,7 @@
             margin-top: 0.25rem;
         }
 
-        /* Two-column layout for some sections */
+        /* Two-column layout */
 
         .two-column {
             display: grid;
@@ -452,7 +457,7 @@
             </div>
             <nav class="site-nav" aria-label="Main navigation">
                 <a href="#about">About</a>
-                <a href="#research">Research & Projects</a>
+                <a href="#research">Research &amp; Projects</a>
                 <a href="#publications">Publications</a>
                 <a href="#experience">Experience</a>
                 <a href="#skills">Skills</a>
@@ -472,14 +477,14 @@
                 <h1 id="hero-title">Hi, I'm <span>Mehdi Taghizadeh</span>.</h1>
                 <p class="hero-subtitle">AI/ML Research Scientist focused on graph neural networks, neural operators, and generative models for complex physical and infrastructure systems.</p>
                 <p class="hero-summary">
-                    I design and build machine learning models that let us reason about floods, power grids, and large-scale transportation systems with the speed of AI and the rigor of physics. 
+                    I design and build machine learning models that let us reason about floods, power grids, and large-scale transportation systems with the speed of AI and the rigor of physics.
                     My work spans <strong>multi-fidelity graph neural networks</strong>, <strong>geometry-informed neural operators</strong>, and <strong>physics-informed generative models</strong>, with applications in flood forecasting, power flow, and safety analytics on <strong>15.6B+</strong> connected-vehicle events.
                 </p>
                 <div class="hero-highlights">
                     <span class="hero-tag">Graph Neural Networks</span>
                     <span class="hero-tag">Neural Operators (GINO/FNO)</span>
                     <span class="hero-tag">Physics-informed ML</span>
-                    <span class="hero-tag">Generative & Diffusion Models</span>
+                    <span class="hero-tag">Generative &amp; Diffusion Models</span>
                 </div>
                 <div class="hero-meta">
                     <span><strong>Current:</strong> Postdoctoral Research Associate, University of Virginia</span>
@@ -490,8 +495,6 @@
                     <a href="https://scholar.google.com/citations?user=liOX5_wAAAAJ" target="_blank" rel="noopener noreferrer">Google Scholar</a>
                     <a href="https://github.com/MehdiTaghizadehUVa" target="_blank" rel="noopener noreferrer">GitHub</a>
                     <a href="https://www.linkedin.com/in/mehdi-taghizadeh/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-                    <!-- Optional CV link; update href to actual file if hosted -->
-                    <!-- <a href="Mehdi_Taghizadeh_CV.pdf" target="_blank" rel="noopener noreferrer">Download CV (PDF)</a> -->
                 </div>
             </div>
 
@@ -549,7 +552,7 @@
         <!-- Research & Projects -->
         <section id="research" class="section" aria-labelledby="research-title">
             <div class="section-header">
-                <h2 id="research-title">Research & Selected Projects</h2>
+                <h2 id="research-title">Research &amp; Selected Projects</h2>
                 <p>Problem–driven work across floods, power systems, and large-scale transportation data.</p>
             </div>
 
@@ -593,7 +596,7 @@
 
                 <!-- HydroGraphNet & PhysicsNeMo -->
                 <article class="card">
-                    <span class="pill-label">HydroGraphNet & PhysicsNeMo</span>
+                    <span class="pill-label">HydroGraphNet &amp; PhysicsNeMo</span>
                     <h3>Physics-informed GNNs with interpretable KAN layers</h3>
                     <p>
                         I created <strong>HydroGraphNet</strong>, a physics-informed GNN for flood forecasting that embeds
@@ -612,7 +615,7 @@
 
                 <!-- Power systems -->
                 <article class="card">
-                    <span class="pill-label">Power Systems & Physical Networks</span>
+                    <span class="pill-label">Power Systems &amp; Physical Networks</span>
                     <h3>Multi-fidelity GNN surrogates for probabilistic power flow</h3>
                     <p>
                         For modern grids with high renewable penetration, I built GNN-based surrogates for
@@ -629,7 +632,7 @@
 
                 <!-- Connected vehicle data -->
                 <article class="card">
-                    <span class="pill-label">Connected Vehicle Data & Safety</span>
+                    <span class="pill-label">Connected Vehicle Data &amp; Safety</span>
                     <h3>Big-data analytics for proactive multimodal safety</h3>
                     <p>
                         As Lead Analyst on a Virginia DOT project, I designed and operated a full pipeline for
@@ -647,7 +650,7 @@
 
                 <!-- Generative & optimization work -->
                 <article class="card">
-                    <span class="pill-label">Generative Models & Optimization</span>
+                    <span class="pill-label">Generative Models &amp; Optimization</span>
                     <h3>Graph-based diffusion for constrained trajectory optimization</h3>
                     <p>
                         In ongoing postdoctoral work, I am exploring <strong>graph-based diffusion models</strong> coupled with
@@ -675,15 +678,15 @@
             <ul class="inline-list">
                 <li>
                     <strong>Multi-fidelity Graph Neural Networks for Efficient and Accurate Flood Hazard Mapping</strong> —
-                    <em>Environmental Modelling &amp; Software</em>, 2025. (Multi-fidelity GNN surrogates for large-scale flood hazard mapping.)
+                    <em>Environmental Modelling &amp; Software</em>, 2025.
                 </li>
                 <li>
                     <strong>Interpretable Physics-Informed Graph Neural Networks for Flood Forecasting</strong> —
-                    <em>Computer-Aided Civil and Infrastructure Engineering</em>, 2025. (HydroGraphNet with physics constraints and KAN-based interpretability.)
+                    <em>Computer-Aided Civil and Infrastructure Engineering</em>, 2025.
                 </li>
                 <li>
                     <strong>Multifidelity Graph Neural Networks for Efficient and Accurate Mesh-based PDE Surrogate Modeling</strong> —
-                    <em>Computer-Aided Civil and Infrastructure Engineering</em>, 2024. (General MFGNN framework for mesh-based PDEs.)
+                    <em>Computer-Aided Civil and Infrastructure Engineering</em>, 2024.
                 </li>
                 <li>
                     <strong>Multi-fidelity Graph Neural Networks for Efficient Power Flow Analysis under High-Dimensional Demand and Renewable Generation Uncertainty</strong> —
@@ -717,7 +720,7 @@
 
                     <div class="experience-item">
                         <div class="experience-header">
-                            <span class="experience-title">Ph.D. Research Assistant & Lead Analyst</span>
+                            <span class="experience-title">Ph.D. Research Assistant &amp; Lead Analyst</span>
                             <span class="experience-meta">University of Virginia · 2022 – 2025</span>
                         </div>
                         <ul>
@@ -731,7 +734,7 @@
                 <div class="column">
                     <div class="experience-item">
                         <div class="experience-header">
-                            <span class="experience-title">Graduate Researcher, Infrastructure Resilience & Uncertainty</span>
+                            <span class="experience-title">Graduate Researcher, Infrastructure Resilience &amp; Uncertainty</span>
                             <span class="experience-meta">Sharif University of Technology · 2018 – 2020</span>
                         </div>
                         <ul>
@@ -754,7 +757,7 @@
                     <p class="skills-list">
                         Graph Neural Networks (GNNs); Neural Operators (GINO, FNO); CNNs; attention/transformer-style architectures;
                         diffusion &amp; GAN-based generative models; physics-informed ML; domain adaptation; multi-fidelity modeling;
-                        basic reinforcement learning for control/process optimization.
+                        basic reinforcement learning for control and process optimization.
                     </p>
                 </div>
                 <div>
